bad/assign_literal_string_string.example_compiler_output
ERROR
[1mbad/assign_literal_string_string.lat:4:8: [1;31merror: [0;1mleft side is not assignable[m
	"abc" = "";
	      [1;32m^[m
[1mbad/assign_literal_string_string.lat:4:6: [1;34mnote: [0;1mleft side starts here[m
	"abc" = "";
	    [1;32m^[m
